plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//WEB
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	//THYMELEAF
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	
	//LOMBOK
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	//TEST
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//CONTROLLER_VALIDATION
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'javax.validation:validation-api:2.0.1.Final'

	//DB
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//FILE UPLOAD
	implementation 'commons-fileupload:commons-fileupload:1.5'

	//MULTIPARTCONFIG
	implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'

	// REST
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'com.google.code.gson:gson'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	// TMDB 파싱용
	implementation 'org.json:json:20240303'

	//SECURITY
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	//OAUTH2 CLIENT
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	
	//REDIS
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.4.5'
	implementation 'org.springframework.session:spring-session-data-redis:3.4.3'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation'


}


tasks.named('test') {
	useJUnitPlatform()
}



